fix: charts flex wrap on initial load, map scaling responsive

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,9 +1,3 @@
-html,
-body {
-  width: 100%;
-  height: 100%;
-}
-
 .App {
   background-color: #f4f4f4;
 }
@@ -28,4 +22,14 @@ th {
   z-index: 10;
   position: sticky;
   position: -webkit-sticky;
+}
+
+@media (max-width: 500px) {
+  .chartWrapper {
+    flex-direction: column;
+  }
+  .dailyChart,
+  .previousChart {
+    flex: 100%;
+  }
 }
